--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "mocha": "NODE_ENV=test mocha --opts mocha.opts",
     "prestart": "yarn build",
     "start": "node ./bin/silver-bullet",
-    "test": "yarn lint && yarn mocha"
+    "test": "yarn lint && yarn mocha",
+    "predeploy": "yarn build",
+    "deploy": "cp -fru -t ~/bin/_silver-bullet bin dist node_modules"
   },
   "files": [
     "bin",
     "dist"
   ],
+  "preferGlobal": true,
   "devDependencies": {
     "@types/chai": "^4.1.2",
     "@types/minimist": "^1.2.0",
