--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/minimist": "^1.2.0",
     "@types/mocha": "^5.0.0",
     "@types/node": "^9.6.5",
+    "@types/request-promise-native": "^1.0.15",
     "chai": "^4.1.2",
     "mocha": "^5.1.0",
     "tslint": "^5.9.1",
@@ -34,6 +35,8 @@
   },
   "dependencies": {
     "deep-merge": "^1.0.0",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.5"
   }
 }
