--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "silverbullet",
-  "version": "0.1.0",
+  "version": "0.9.0",
   "description": "Consumes a text file with tracked days and a project mapping file and provides shortcuts to automatically enter work durations and descriptions for the correct projects into projectile fields.",
   "main": "./dist/index.js",
   "author": "JG",
@@ -27,6 +27,7 @@
     "@types/minimist": "^1.2.0",
     "@types/mocha": "^8.0.0",
     "@types/node": "^14.0.26",
+    "@types/pino": "^6.3.5",
     "@types/request-promise-native": "^1.0.17",
     "chai": "^4.2.0",
     "mocha": "^8.0.1",
@@ -36,6 +37,8 @@
   "dependencies": {
     "deep-merge": "^1.0.0",
     "minimist": "^1.2.5",
+    "pino": "^6.11.0",
+    "pino-pretty": "^4.5.0",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9"
   }
